# eth-asl-project

./: .clang-format  .gitattributes  .gitignore  .vimrc  CMakeLists.txt  README.md  lena.gray  lenasmall.gray  norot.gray  test.gray  toggle-turbo.sh  tool.py  wtf.gray
doc/compiler-flags/: compiler-flags.R  performance_gcc_vs_icc.R  performance_scalar_opts.R  performance_vectorized_opts.R  test-compiler-flags.sh
doc/compiler-flags/data.bak/gcc-40_ilp_norot_90_270/: lion_1024.csv  lion_2048.csv  lion_512.csv
doc/compiler-flags/data.bak/gcc-51_simd_improved_rot/: lion_128.csv  lion_2048.csv  lion_4096.csv
doc/compiler-flags/data.bak/gcc_O1-40_ilp_norot_90_270/: lion_1024.csv  lion_128.csv  lion_4096.csv  lion_512.csv  lion_64.csv
doc/compiler-flags/data.bak/gcc_O1-51_simd_improved_rot/: lion_128.csv  lion_256.csv  lion_4096.csv  lion_512.csv  lion_64.csv
doc/compiler-flags/data.bak/gcc_O2-40_ilp_norot_90_270/: lion_1024.csv  lion_128.csv  lion_2048.csv  lion_4096.csv  lion_64.csv
doc/compiler-flags/data.bak/gcc_O2-51_simd_improved_rot/: lion_128.csv  lion_256.csv  lion_512.csv
doc/compiler-flags/data.bak/gcc_O3-40_ilp_norot_90_270/: lion_4096.csv  lion_512.csv
doc/compiler-flags/data.bak/gcc_O3-51_simd_improved_rot/: lion_512.csv  lion_64.csv
doc/compiler-flags/data.bak/gcc_O3_no_fma-40_ilp_norot_90_270/: lion_1024.csv  lion_128.csv  lion_2048.csv  lion_256.csv  lion_4096.csv
doc/compiler-flags/data.bak/gcc_O3_unroll-40_ilp_norot_90_270/: lion_1024.csv  lion_128.csv  lion_2048.csv
doc/compiler-flags/data.bak/gcc_O3_unroll-51_simd_improved_rot/: lion_256.csv  lion_64.csv
doc/compiler-flags/data.bak/gcc_Ofast-40_ilp_norot_90_270/: lion_1024.csv  lion_128.csv  lion_2048.csv  lion_256.csv
doc/compiler-flags/data.bak/gcc_Ofast-51_simd_improved_rot/: lion_128.csv  lion_2048.csv  lion_4096.csv  lion_64.csv
doc/compiler-flags/data.bak/icc_O3-40_ilp_norot_90_270/: lion_1024.csv  lion_128.csv  lion_2048.csv  lion_4096.csv  lion_64.csv
doc/compiler-flags/data.bak/icc_O3-51_simd_improved_rot/: lion_2048.csv  lion_64.csv
doc/compiler-flags/data.bak/icc_Ofast-40_ilp_norot_90_270/: lion_1024.csv  lion_2048.csv  lion_256.csv  lion_4096.csv  lion_512.csv  lion_64.csv
doc/compiler-flags/data.bak/icc_Ofast-51_simd_improved_rot/: lion_256.csv  lion_512.csv
doc/compiler-flags/data.new.bak/gcc-25_ilp/: lion_1024.csv
doc/compiler-flags/data.new.bak/gcc_O1-25_ilp/: lion_128.csv  lion_512.csv
doc/compiler-flags/data.new.bak/gcc_O2-25_ilp/: lion_1024.csv  lion_128.csv  lion_4096.csv
doc/compiler-flags/data.new.bak/gcc_O3-25_ilp/: lion_1024.csv  lion_128.csv  lion_256.csv  lion_4096.csv
doc/compiler-flags/data.new.bak/gcc_O3_no_fma-25_ilp/: lion_1024.csv  lion_512.csv
doc/compiler-flags/data.new.bak/gcc_O3_unroll-25_ilp/: lion_4096.csv  lion_512.csv
doc/compiler-flags/data.new.bak/gcc_Ofast-25_ilp/: lion_1024.csv  lion_2048.csv  lion_64.csv
doc/compiler-flags/data.new.bak/icc_O3-25_ilp/: lion_1024.csv
doc/compiler-flags/data.new.bak/icc_Ofast-25_ilp/: lion_256.csv  lion_4096.csv  lion_512.csv  lion_64.csv
doc/compiler-flags/data/gcc-25_ilp/: lion_128.csv  lion_2048.csv  lion_256.csv  lion_4096.csv  lion_512.csv  lion_64.csv
doc/compiler-flags/data/gcc-40_ilp_norot_90_270/: lion_128.csv  lion_256.csv  lion_4096.csv  lion_64.csv
doc/compiler-flags/data/gcc-51_simd_improved_rot/: lion_1024.csv  lion_256.csv  lion_512.csv  lion_64.csv
doc/compiler-flags/data/gcc_O1-25_ilp/: lion_1024.csv  lion_2048.csv  lion_256.csv  lion_4096.csv  lion_64.csv
doc/compiler-flags/data/gcc_O1-40_ilp_norot_90_270/: lion_2048.csv  lion_256.csv
doc/compiler-flags/data/gcc_O1-51_simd_improved_rot/: lion_1024.csv  lion_2048.csv
doc/compiler-flags/data/gcc_O1_fma-40_ilp_norot_90_270/: lion_1024.csv  lion_128.csv  lion_2048.csv  lion_256.csv  lion_4096.csv  (+2 more)
doc/memory-analysis/: simulate_25.py  simulate_25_lion.py
doc/performance-plot/: README.md  collect-data.sh  performance.R  performance2.R  performance_norot.R
doc/performance-plot/data/: grey-parrot_1024.csv  lena_256.csv  lena_512.csv  lena_64.csv  memory_1024.csv  memory_128.csv  memory_256.csv  memory_512.csv  memory_64.csv  monkey_128.csv
doc/performance-plot/ref_impl/: Encoder.cpp  IFSTransform.cpp  Image.cpp  Image.h  QuadTreeEncoder.cpp  fractal  main.cpp
doc/report/: .gitignore  01_introduction.tex  02_background.tex  03_your_method.tex  04_results.tex  05_conclusions.tex  06_contributions.tex  _region_.tex  bibl_conf.bib  report.tex  report.title.tex  setup.tex
doc/roofline/: .gitignore  roofline.R  roofline.Rmd  roofline_pascal.R
doc/valgrind/: README.md  grind.sh
images/: lion_1024.gray  lion_128.gray  lion_1536.gray  lion_2048.gray  lion_256.gray  lion_3072.gray  lion_384.gray  lion_4096.gray  lion_512.gray  lion_64.gray  lion_768.gray
images/other/: README.md  basler_768.gray  circle_512.gray  coffee_1280.gray  forest_1792.gray  grey-parrot_1024.gray  lena_256.gray  lena_512.gray  lena_64.gray  matterhorn_2048.gray  monkey_128.gray  saft-vom-fass_256.gray  squirrel_2304.gray
src/: 01_precompute_indices.c  02_precomputations.c  03_jonas.c  04_jonas_one_rtd_function_per_degree_no_optimizations.c  05_rtd_in_main_loop.c  06_optimize_compute_and_brightness.c  07_jopa.c  08_jopa.c  09_basel.c  0a_inline.c  10_simd_brightness_and_contrast.c  11_simd_rtd.c  12_simd_rtd_with_prepared_rb.c  13_simd_fck_the_structs.c  25_ilp.c  26_recursive.c  30_simd_precomp_rotations.c  31_simd_precomp_rotations_no_bac_simd.c  35_simd.c  36_partial_simd.c  36_pascal.c  37_full_simd.c  40_ilp_norot_90_270.c  41_simd_norot_90_270.c  CMakeLists.txt  benchmark.cpp  common.h  fast.c  filehandler.cpp  filehandler.h  main.cpp  naive.c  naive.cpp  rotate.cpp  rotate.h  tsc_x86.h  wip_idea_fabian.c
src/exec/: bench_rtd.c  benchmark.cpp  benchmark_compress.cpp  benchmark_decompress.cpp  compress_decompress.cpp  fic.cpp  rotate.cpp  test_rotate.cpp
src/lib/: common.h  common.hpp  filehandler.cpp  filehandler.h  filehandler.hpp  performance.c  performance.h  queue.c  queue.h  rotate.c  rotate.h  tsc_x86.h  types.c  types.h
(+472 files in other folders)
